# ICP-Encrypted-Notes

./: .eslintignore  .eslintrc.js  .eslintrc.json  .lintstagedrc.js  .prettierignore  .prettierrc.js  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml
docs/: README.md
scripts/: did.sh  test.sh
src/encrypted_notes_backend/: Cargo.toml  README.md  encrypted_notes_backend.did
src/encrypted_notes_backend/src/: devices.rs  devices_store.rs  lib.rs  notes.rs  notes_store.rs  stores.rs
src/encrypted_notes_frontend/src/: App.tsx  index.html  index.js  index.tsx
src/encrypted_notes_frontend/src/components/: Button.tsx  Layout.tsx  Note.tsx  Sidebar.tsx  TextInput.tsx  index.ts
src/encrypted_notes_frontend/src/components/DeleteItemDialog/: index.tsx
src/encrypted_notes_frontend/src/components/DeleteNoteDialog/: index.tsx
src/encrypted_notes_frontend/src/hooks/: authContext.ts  index.ts  useAuth.ts  useDeviceCheck.ts  useDevices.ts  useLoginUser.ts  useMessage.ts
src/encrypted_notes_frontend/src/lib/: crypto.ts  cryptoService.ts  keyStorage.ts
src/encrypted_notes_frontend/src/pages/: DeviceList.tsx  DeviceManagement.tsx  Devices.tsx  EditNote.tsx  Login.tsx  NewNote.tsx  Note.tsx  NoteList.tsx  Notes.tsx  Page404.tsx
src/encrypted_notes_frontend/src/providers/: LoginUserProvider.tsx
src/encrypted_notes_frontend/src/router/: Router.tsx
src/encrypted_notes_frontend/src/routes/: index.ts
src/encrypted_notes_frontend/src/types/: data.d.ts  index.ts
(+11 files in other folders)
